--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 <body>
     <a-scene background="color: #333">
         <a-assets>
-            <a-asset-item id="ENA58TL" src="/gltf/ENA58TL-R10DA7-1516-IO-RBD01.gltf"></a-asset-item>
-            <a-asset-item id="ICE2" src="/gltf/ICE2-8IOL-G65L-V1D.gltf"></a-asset-item>
-            <a-asset-item id="IQT1" src="/gltf/IQT1-FP-IO-V1.gltf"></a-asset-item>
-            <a-asset-item id="NRB20" src="/gltf/NRB20-L3-E2-IO-V1.gltf"></a-asset-item>
-            <a-asset-item id="OMT300" src="/gltf/OMT300-R200-2EP-IO-V1.gltf"></a-asset-item>
-            <a-asset-item id="PMI40" src="/gltf/PMI40-F90-IU2EP-IO-V15.gltf"></a-asset-item>
-            <a-asset-item id="UC800-F77S-EP-IO-V31.gltf" src="/gltf/UC800-F77S-EP-IO-V31.gltf"></a-asset-item>
-            <a-asset-item id="vim" src="/gltf/vim.gltf"></a-asset-item>
+            <a-asset-item id="ENA58TL" src="gltf/ENA58TL-R10DA7-1516-IO-RBD01.gltf"></a-asset-item>
+            <a-asset-item id="ICE2" src="gltf/ICE2-8IOL-G65L-V1D.gltf"></a-asset-item>
+            <a-asset-item id="IQT1" src="gltf/IQT1-FP-IO-V1.gltf"></a-asset-item>
+            <a-asset-item id="NRB20" src="gltf/NRB20-L3-E2-IO-V1.gltf"></a-asset-item>
+            <a-asset-item id="OMT300" src="gltf/OMT300-R200-2EP-IO-V1.gltf"></a-asset-item>
+            <a-asset-item id="PMI40" src="gltf/PMI40-F90-IU2EP-IO-V15.gltf"></a-asset-item>
+            <a-asset-item id="UC800-F77S-EP-IO-V31.gltf" src="gltf/UC800-F77S-EP-IO-V31.gltf"></a-asset-item>
+            <a-asset-item id="vim" src="gltf/vim.gltf"></a-asset-item>
 
             <a-asset-item id="PXV-obj" src="/PXV100-F200-B25-V1D.gltf"></a-asset-item>
             <a-asset-item id="basic-mtl" src="/basic.mtl"></a-asset-item>
