--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a-asset-item id="NRB20" src="gltf/NRB20-L3-E2-IO-V1.gltf"></a-asset-item>
             <a-asset-item id="OMT300" src="gltf/OMT300-R200-2EP-IO-V1.gltf"></a-asset-item>
             <a-asset-item id="PMI40" src="gltf/PMI40-F90-IU2EP-IO-V15.gltf"></a-asset-item>
-            <a-asset-item id="UC800-F77S-EP-IO-V31.gltf" src="gltf/UC800-F77S-EP-IO-V31.gltf"></a-asset-item>
+            <a-asset-item id="UC800" src="gltf/UC800-F77S-EP-IO-V31.gltf"></a-asset-item>
             <a-asset-item id="vim" src="gltf/vim.gltf"></a-asset-item>
 
             <a-asset-item id="PXV-obj" src="PXV100-F200-B25-V1D.gltf"></a-asset-item>
@@ -24,15 +24,27 @@
         </a-assets>
 
         <a-entity id="mouseCursor" cursor="rayOrigin: mouse"></a-entity>
-        <a-entity gltf-model="#VBG-ENX-K20-DMD-obj" scale="0.001 0.001 0.001" position="0 1.5 -1" rotation="90 0 0">
-        </a-entity>
-        <a-entity gltf-model="#ICE2" scale="0.001 0.001 0.001" position="-0.37 0.943 -1" rotation="90 90 0"
-></a-entity>
+
+
         </a-entity>
         <a-entity gltf-model="#PXV-obj" scale="0.001 0.001 0.001" position="0.1 1.5 -1" rotation="90 0 0"
             animation__mouseenter="property: position; to: 0.6 1.5 -1; dur: 1000; easing: linear;startEvents: mouseenter;"
             animation__mouseleave="property: position; to: 0.1 1.5 -1; dur: 1000; easing: linear;startEvents: mouseleave;">
         </a-entity>
+
+
+        <a-entity gltf-model="#ICE2" scale="0.001 0.001 0.001" position="-0.37 0.943 -1" rotation="90 90 0" color="#000"></a-entity>
+        <a-entity gltf-model="#ENA58TL" scale="0.001 0.001 0.001" position="-0.085 1.230 -1.160" rotation="90 180 0"></a-entity>
+        <a-entity gltf-model="#IQT1" scale="0.001 0.001 0.001" position="0.075 1.0505 -1.160" rotation="90 180 0"></a-entity>
+
+        <a-entity gltf-model="#NRB20" scale="0.001 0.001 0.001" position="-0.37 1.0505 -1" rotation="90 90 0"></a-entity>
+        <a-entity gltf-model="#OMT300" scale="0.001 0.001 0.001" position="0 1.0805 -1" rotation="90 90 0"></a-entity>
+        <a-entity gltf-model="#PMI40" scale="0.001 0.001 0.001" position="-0.37 1.0505 -1" rotation="90 90 0"></a-entity>
+        <a-entity gltf-model="#UC800" scale="0.001 0.001 0.001" position="-0.37 1.0505 -1" rotation="90 90 0"></a-entity>
+
+
+
+        <!-- estrutura pult-->
         <a-box position="0 0 0" depth="10" height="0.1" width="10" color="#4CC3D9"
             animation__mouseenter="property: components.material.material.color; type: color; to: blue; startEvents: mouseenter; dur: 500"
             animation__mouseleave="property: components.material.material.color; type: color; to: red; startEvents: mouseleave; dur: 500">
@@ -43,8 +55,16 @@
         <a-box position="0 1.0505 -0.74" width="0.600" depth="0.080" height="0.001" color="#fff"></a-box>
         <a-box position="0 1.0505 -1" width="0.600" depth="0.440" height="0.001" color="#ccc"></a-box>
 
+        <a-box position="-0.050 1.1505 -1.160" width="0.020" depth="0.150" height="0.200" color="#eee"></a-box>
+        <a-box position="0.200 1.1505 -1.160" width="0.020" depth="0.150" height="0.200" color="#eee"></a-box>
+        <a-box position="0.075 1.2305 -1.160" width="0.020" depth="0.100" height="0.200" color="#eee"></a-box>
+        <a-cylinder position="0.050 1.2305 -1.160" rotation="90 90 0" radius="0.005" height="0.280" color="#000"></a-cylinder>
+        <a-cylinder position="0.230 1.2305 -1.160" rotation="90 90 0" radius="0.09" height="0.015" color="#9ee"></a-cylinder> 
+        <a-cylinder position="0.215 1.1005 -1.160" rotation="90 90 0" radius="0.005" height="0.050" color="#000"></a-cylinder>       
+        <a-cylinder position="0.230 1.1005 -1.160" rotation="90 90 0" radius="0.040" height="0.015" color="#9ee"></a-cylinder>
+        <a-cylinder position="0.230 1.0105 -1.160" rotation="90 90 0" radius="0.050" height="0.015" color="#9ee"></a-cylinder>
 
-        </a-box>
+
     </a-scene>
 </body>
 
