--- a/index.html
+++ b/index.html
@@ -33,14 +33,20 @@
         </a-entity>
 
 
-        <a-entity gltf-model="#ICE2" scale="0.001 0.001 0.001" position="-0.37 0.943 -1" rotation="90 90 0" color="#000"></a-entity>
-        <a-entity gltf-model="#ENA58TL" scale="0.001 0.001 0.001" position="-0.085 1.230 -1.160" rotation="90 180 0"></a-entity>
-        <a-entity gltf-model="#IQT1" scale="0.001 0.001 0.001" position="0.075 1.0505 -1.160" rotation="90 180 0"></a-entity>
+        <a-entity gltf-model="#ICE2" scale="0.001 0.001 0.001" position="-0.37 0.943 -1" rotation="90 90 0"
+            color="#000"></a-entity>
+        <a-entity gltf-model="#ENA58TL" scale="0.001 0.001 0.001" position="-0.085 1.230 -1.160" rotation="90 180 0">
+        </a-entity>
+        <a-entity gltf-model="#IQT1" scale="0.001 0.001 0.001" position="0.075 1.0505 -1.160" rotation="90 180 0">
+        </a-entity>
 
-        <a-entity gltf-model="#NRB20" scale="0.001 0.001 0.001" position="-0.37 1.0505 -1" rotation="90 90 0"></a-entity>
+        <a-entity gltf-model="#NRB20" scale="0.001 0.001 0.001" position="-0.37 1.0505 -1" rotation="90 90 0">
+        </a-entity>
         <a-entity gltf-model="#OMT300" scale="0.001 0.001 0.001" position="0 1.0805 -1" rotation="90 90 0"></a-entity>
-        <a-entity gltf-model="#PMI40" scale="0.001 0.001 0.001" position="-0.37 1.0505 -1" rotation="90 90 0"></a-entity>
-        <a-entity gltf-model="#UC800" scale="0.001 0.001 0.001" position="-0.37 1.0505 -1" rotation="90 90 0"></a-entity>
+        <a-entity gltf-model="#PMI40" scale="0.001 0.001 0.001" position="-0.37 1.0505 -1" rotation="90 90 0">
+        </a-entity>
+        <a-entity gltf-model="#UC800" scale="0.001 0.001 0.001" position="-0.37 1.0505 -1" rotation="90 90 0">
+        </a-entity>
 
 
 
@@ -57,12 +63,18 @@
 
         <a-box position="-0.050 1.1505 -1.160" width="0.020" depth="0.150" height="0.200" color="#eee"></a-box>
         <a-box position="0.200 1.1505 -1.160" width="0.020" depth="0.150" height="0.200" color="#eee"></a-box>
-        <a-box position="0.075 1.2305 -1.160" width="0.020" depth="0.100" height="0.200" color="#eee"></a-box>
-        <a-cylinder position="0.050 1.2305 -1.160" rotation="90 90 0" radius="0.005" height="0.280" color="#000"></a-cylinder>
-        <a-cylinder position="0.230 1.2305 -1.160" rotation="90 90 0" radius="0.09" height="0.015" color="#9ee"></a-cylinder> 
-        <a-cylinder position="0.215 1.1005 -1.160" rotation="90 90 0" radius="0.005" height="0.050" color="#000"></a-cylinder>       
-        <a-cylinder position="0.230 1.1005 -1.160" rotation="90 90 0" radius="0.040" height="0.015" color="#9ee"></a-cylinder>
-        <a-cylinder position="0.230 1.0105 -1.160" rotation="90 90 0" radius="0.050" height="0.015" color="#9ee"></a-cylinder>
+        <a-box position="0.075 1.2305 -1.160" width="0.020" depth="0.100" height="0.200" color="#eee"
+            animation="property: rotation; from: 0 0 0; to: -360 0 0; loop: true; easing: linear; dur: 2000"></a-box>
+        <a-cylinder position="0.050 1.2305 -1.160" rotation="90 90 0" radius="0.005" height="0.280" color="#000">
+        </a-cylinder>
+        <a-cylinder position="0.230 1.2305 -1.160" rotation="90 90 0" radius="0.09" height="0.015" color="#9ee">
+        </a-cylinder>
+        <a-cylinder position="0.215 1.1005 -1.160" rotation="90 90 0" radius="0.005" height="0.050" color="#000">
+        </a-cylinder>
+        <a-cylinder position="0.230 1.1005 -1.160" rotation="90 90 0" radius="0.040" height="0.015" color="#9ee">
+        </a-cylinder>
+        <a-cylinder position="0.230 1.0105 -1.160" rotation="90 90 0" radius="0.050" height="0.015" color="#9ee">
+        </a-cylinder>
 
 
     </a-scene>
