--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 <body>
     <a-scene background="color: #333">
         <a-assets>
-            <a-asset-item id="ENA58TL" src="gltf/ENA58TL-R10DA7-1516-IO-RBD01.gltf"></a-asset-item>
+            <a-asset-item id="ENA58TL" src="gltf/ENA58TL-R10DA7-1516-IO-RBD01.glb"></a-asset-item>
             <a-asset-item id="ICE2" src="gltf/ICE2-8IOL-G65L-V1D.gltf"></a-asset-item>
+            <a-asset-item id="ICE2_" src="gltf/ice2.glb"></a-asset-item>
             <a-asset-item id="IQT1" src="gltf/IQT1-FP-IO-V1.gltf"></a-asset-item>
             <a-asset-item id="NRB20" src="gltf/NRB20-L3-E2-IO-V1.gltf"></a-asset-item>
             <a-asset-item id="OMT300" src="gltf/OMT300-R200-2EP-IO-V1.gltf"></a-asset-item>
@@ -17,7 +18,7 @@
             <a-asset-item id="UC800" src="gltf/UC800-F77S-EP-IO-V31.gltf"></a-asset-item>
             <a-asset-item id="vim" src="gltf/vim.gltf"></a-asset-item>
 
-            <a-asset-item id="PXV-obj" src="PXV100-F200-B25-V1D.gltf"></a-asset-item>
+            <a-asset-item id="PXV-obj" src="pxv.glb"></a-asset-item>
             <a-asset-item id="basic-mtl" src="basic.mtl"></a-asset-item>
             <a-asset-item response-type="arraybuffer" id="pxv" src="2-D LiDAR Sensor OBD30M-R2000-4EP-V1V17-1L.gltf">
             </a-asset-item>
@@ -33,7 +34,7 @@
         </a-entity>
 
 
-        <a-entity gltf-model="#ICE2" scale="0.001 0.001 0.001" position="-0.37 0.943 -1" rotation="90 90 0"
+        <a-entity gltf-model="#ICE2_" scale="0.001 0.001 0.001" position="-0.210 1.0705 -1.100" rotation="90 90 0"
             color="#000"></a-entity>
         <a-entity gltf-model="#ENA58TL" scale="0.001 0.001 0.001" position="-0.085 1.230 -1.160" rotation="90 180 0">
         </a-entity>
@@ -45,8 +46,8 @@
         <a-entity gltf-model="#OMT300" scale="0.001 0.001 0.001" position="0 1.0805 -1" rotation="90 90 0"></a-entity>
         <a-entity gltf-model="#PMI40" scale="0.001 0.001 0.001" position="-0.37 1.0505 -1" rotation="90 90 0">
         </a-entity>
-        <a-entity gltf-model="#UC800" scale="0.001 0.001 0.001" position="-0.37 1.0505 -1" rotation="90 90 0">
-        </a-entity>
+        <a-entity gltf-model="#UC800" scale="0.001 0.001 0.001" position="-0.37 1.0505 -1" rotation="90 90 0"></a-entity>
+        <a-entity gltf-model="#vim" scale="0.001 0.001 0.001" position="-0.37 1.2505 -1" rotation="90 90 0"></a-entity>
 
 
 
