--- a/index.html
+++ b/index.html
@@ -10,22 +10,21 @@
         <a-assets>
             <a-asset-item id="ENA58TL" src="gltf/ENA58TL-R10DA7-1516-IO-RBD01.glb"></a-asset-item>
             <a-asset-item id="ICE2" src="gltf/ICE2-8IOL-G65L-V1D.gltf"></a-asset-item>
-            <a-asset-item id="ICE2_" src="gltf/ice2.glb"></a-asset-item>
-            <a-asset-item id="IQT1" src="gltf/IQT1-FP-IO-V1.gltf"></a-asset-item>
-            <a-asset-item id="NRB20" src="gltf/NRB20-L3-E2-IO-V1.gltf"></a-asset-item>
-            <a-asset-item id="OMT300" src="gltf/OMT300-R200-2EP-IO-V1.gltf"></a-asset-item>
-            <a-asset-item id="PMI40" src="gltf/PMI40-F90-IU2EP-IO-V15.gltf"></a-asset-item>
-            <a-asset-item id="UC800" src="gltf/UC800-F77S-EP-IO-V31.gltf"></a-asset-item>
+            <a-asset-item id="ICE2_" src="gltf/ice2.gltf"></a-asset-item>
+            <a-asset-item id="IQT1" src="gltf/IQT1.gltf"></a-asset-item>
+            <a-asset-item id="NRB20" src="gltf/NRB20.gltf"></a-asset-item>
+            <a-asset-item id="OMT300" src="gltf/OMT300.gltf"></a-asset-item>
+            <a-asset-item id="PMI40" src="gltf/PMI40.gltf"></a-asset-item>
+            <a-asset-item id="UC800" src="gltf/UC800.gltf"></a-asset-item>
+            <a-asset-item id="BT-F90" src="gltf/BT-F90.gltf"></a-asset-item>
             <a-asset-item id="vim" src="gltf/vim.gltf"></a-asset-item>
-
+            <a-asset-item id="V1S" src="gltf/V1S-G-BK.gltf"></a-asset-item>
             <a-asset-item id="PXV-obj" src="pxv.glb"></a-asset-item>
-            <a-asset-item id="basic-mtl" src="basic.mtl"></a-asset-item>
-            <a-asset-item response-type="arraybuffer" id="pxv" src="2-D LiDAR Sensor OBD30M-R2000-4EP-V1V17-1L.gltf">
-            </a-asset-item>
+            <img id="claim" src="claim.png">
+            <img id="logo" src="logo.PNG">
         </a-assets>
 
         <a-entity id="mouseCursor" cursor="rayOrigin: mouse"></a-entity>
-
 
         </a-entity>
         <a-entity gltf-model="#PXV-obj" scale="0.001 0.001 0.001" position="0.1 1.5 -1" rotation="90 0 0"
@@ -33,50 +32,190 @@
             animation__mouseleave="property: position; to: 0.1 1.5 -1; dur: 1000; easing: linear;startEvents: mouseleave;">
         </a-entity>
 
-
-        <a-entity gltf-model="#ICE2_" scale="0.001 0.001 0.001" position="-0.210 1.0705 -1.100" rotation="90 90 0"
-            color="#000"></a-entity>
-        <a-entity gltf-model="#ENA58TL" scale="0.001 0.001 0.001" position="-0.085 1.230 -1.160" rotation="90 180 0">
-        </a-entity>
-        <a-entity gltf-model="#IQT1" scale="0.001 0.001 0.001" position="0.075 1.0505 -1.160" rotation="90 180 0">
-        </a-entity>
-
-        <a-entity gltf-model="#NRB20" scale="0.001 0.001 0.001" position="-0.37 1.0505 -1" rotation="90 90 0">
-        </a-entity>
-        <a-entity gltf-model="#OMT300" scale="0.001 0.001 0.001" position="0 1.0805 -1" rotation="90 90 0"></a-entity>
-        <a-entity gltf-model="#PMI40" scale="0.001 0.001 0.001" position="-0.37 1.0505 -1" rotation="90 90 0">
-        </a-entity>
-        <a-entity gltf-model="#UC800" scale="0.001 0.001 0.001" position="-0.37 1.0505 -1" rotation="90 90 0"></a-entity>
-        <a-entity gltf-model="#vim" scale="0.001 0.001 0.001" position="-0.37 1.2505 -1" rotation="90 90 0"></a-entity>
-
-
-
-        <!-- estrutura pult-->
+        <!-- piso -->
         <a-box position="0 0 0" depth="10" height="0.1" width="10" color="#4CC3D9"
-            animation__mouseenter="property: components.material.material.color; type: color; to: blue; startEvents: mouseenter; dur: 500"
-            animation__mouseleave="property: components.material.material.color; type: color; to: red; startEvents: mouseleave; dur: 500">
+            animation__mouseenter="property: components.material.material.color; type: color; to: rgb(0,165,135); startEvents: mouseenter; dur: 500"
+            animation__mouseleave="property: components.material.material.color; type: color; to: grey; startEvents: mouseleave; dur: 500">
         </a-box>
 
-        <a-box position="0 1 -1" width="0.600" depth="0.600" height="0.100" color="#425563"></a-box>
-        <a-box position="0 1.0505 -1.26" width="0.600" depth="0.080" height="0.001" color="#fff"></a-box>
-        <a-box position="0 1.0505 -0.74" width="0.600" depth="0.080" height="0.001" color="#fff"></a-box>
-        <a-box position="0 1.0505 -1" width="0.600" depth="0.440" height="0.001" color="#ccc"></a-box>
+        <a-entity pult position="-0.5 0 0">
+            <a-box position="0 1 -1" width="0.600" depth="0.600" height="0.100" color="#425563"></a-box>
+            <a-box position="0 1.0505 -1.26" width="0.600" depth="0.080" height="0.001" color="#fff"></a-box>
+            <a-box position="0 1.0505 -0.74" width="0.600" depth="0.080" height="0.001" color="#fff"></a-box>
+            <a-box position="0 1.0505 -1" width="0.600" depth="0.440" height="0.001" color="#ccc"></a-box>
+            <a-image src="#logo" position="0.180 1.0511 -1.258" scale="0.2 0.04 0" rotation="-90 0 0"></a-image>
+            <a-image src="#claim" position="-0.160 1.0511 -1.258" scale="0.25 0.04 0" rotation="-90 0 0"></a-image>
+            <a-text value="Tecnologia IO-Link" negate="true" color="#000" position="-0.280 1.0511 -0.750"
+                scale="0.10 0.10" rotation="-90 0 0"></a-text>
+            <a-text value="Abrindo caminho para a Industria 4.0" negate="true" color="rgb(0,165,135)"
+                position="-0.280 1.0511 -0.73" scale="0.08 0.08" rotation="-90 0 0"></a-text>
+            <!-- alvo -->
+            <a-box position="0 1.0505 -0.850" width="0.300" depth="0.010" height="0.002" color="#111"></a-box>
+            <a-entity alvo animation="property: position; from: -0.145 0 0; to: 0.145 0 0;
+            dir: alternate; dur: 5000; easing: easeInOutQuad; loop:true">
+                <a-box position="0 1.0505 -0.850" width="0.010" depth="0.010" height="0.022" color="#bbb"></a-box>
+                <a-box position="0 1.0905 -0.850" width="0.010" depth="0.070" height="0.082" color="#bbb"></a-box>
+            </a-entity>
+            <!-- dispositivos -->
+            <a-entity gltf-model="#ICE2_" scale="0.001 0.001 0.001" position="-0.210 1.0705 -1.100" rotation="90 90 0"
+                color="#000"></a-entity>
+            <a-entity conectores position="-0.210 1.0805 -1.162">
+                <a-entity gltf-model="#V1S" position="0.015 0 0.022" rotation="0 0 90"> </a-entity>
+                <a-entity gltf-model="#V1S" position="0.015 0 0.044" rotation="0 0 90"> </a-entity>
+                <a-entity gltf-model="#V1S" position="0.015 0 0.066" rotation="0 0 90"> </a-entity>
+                <a-entity gltf-model="#V1S" position="0.015 0 0.088" rotation="0 0 90"> </a-entity>
+                <a-entity gltf-model="#V1S" position="-0.015 0 0.022" rotation="0 0 90"> </a-entity>
+                <a-entity gltf-model="#V1S" position="-0.015 0 0.044" rotation="0 0 90"> </a-entity>
+                <a-entity gltf-model="#V1S" position="-0.015 0 0.066" rotation="0 0 90"> </a-entity>
+                <a-entity gltf-model="#V1S" position="-0.015 0 0.088" rotation="0 0 90"> </a-entity>
+            </a-entity>
+            <a-entity gltf-model="#NRB20" scale="0.001 0.001 0.001" position="0.140 1.0805 -0.930" rotation="90 0 0">
+            </a-entity>
+            <a-entity gltf-model="#OMT300" scale="0.001 0.001 0.001" position="-0.190 1.0805 -0.850" rotation="90 90 0">
+            </a-entity>
+            <a-entity gltf-model="#PMI40" scale="0.001 0.001 0.001" position="-0.100 1.0805 -0.910" rotation="0 90 0">
+            </a-entity>
+            <a-entity gltf-model="#UC800" scale="0.001 0.001 0.001" position="0.200 1.0805 -0.840" rotation="90 90 0">
+            </a-entity>
 
-        <a-box position="-0.050 1.1505 -1.160" width="0.020" depth="0.150" height="0.200" color="#eee"></a-box>
-        <a-box position="0.200 1.1505 -1.160" width="0.020" depth="0.150" height="0.200" color="#eee"></a-box>
-        <a-box position="0.075 1.2305 -1.160" width="0.020" depth="0.100" height="0.200" color="#eee"
-            animation="property: rotation; from: 0 0 0; to: -360 0 0; loop: true; easing: linear; dur: 2000"></a-box>
-        <a-cylinder position="0.050 1.2305 -1.160" rotation="90 90 0" radius="0.005" height="0.280" color="#000">
-        </a-cylinder>
-        <a-cylinder position="0.230 1.2305 -1.160" rotation="90 90 0" radius="0.09" height="0.015" color="#9ee">
-        </a-cylinder>
-        <a-cylinder position="0.215 1.1005 -1.160" rotation="90 90 0" radius="0.005" height="0.050" color="#000">
-        </a-cylinder>
-        <a-cylinder position="0.230 1.1005 -1.160" rotation="90 90 0" radius="0.040" height="0.015" color="#9ee">
-        </a-cylinder>
-        <a-cylinder position="0.230 1.0105 -1.160" rotation="90 90 0" radius="0.050" height="0.015" color="#9ee">
-        </a-cylinder>
+            <a-entity estruturafeijao position="0 0 0.050">
+                <a-box position="-0.050 1.1505 -1.160" width="0.020" depth="0.150" height="0.200" color="#eee"
+                    material="transparent: true; opacity: 0.7"></a-box>
+                <a-box position="0.200 1.1505 -1.160" width="0.020" depth="0.150" height="0.200" color="#eee"
+                    material="transparent: true; opacity: 0.7"></a-box>
+                <a-entity feijao position="0.075 1.2305 -1.160" rotation="0 0 0"
+                    animation="property: rotation; from: 0 0 0; to: -360 0 0; loop: true; easing: linear; dur: 4000">
+                    <a-box position="0 0 0" width="0.020" depth="0.100" height="0.200" color="#eee"
+                        material="transparent: true; opacity: 0.7"> </a-box>
+                    <a-cylinder position="-0.0125 0.075 0" rotation="90 90 0" radius="0.015" height="0.005"
+                        color="#222"> </a-cylinder>
+                    <a-cylinder position="-0.0125 -0.075 0" rotation="90 90 0" radius="0.015" height="0.005"
+                        color="#222"> </a-cylinder>
+                </a-entity>
+                <a-cylinder position="0.070 1.2305 -1.160" rotation="90 90 0" radius="0.005" height="0.360"
+                    color="#aaa">
+                </a-cylinder>
+                <a-cylinder position="0.230 1.2305 -1.160" rotation="90 90 0" radius="0.09" height="0.015" color="#eee"
+                    material="transparent: true; opacity: 0.7">
+                </a-cylinder>
+                <a-cylinder position="0.215 1.1005 -1.160" rotation="90 90 0" radius="0.005" height="0.050"
+                    color="#aaa">
+                </a-cylinder>
+                <a-cylinder position="0.230 1.1005 -1.160" rotation="90 90 0" radius="0.040" height="0.015" color="#eee"
+                    material="transparent: true; opacity: 0.7">
+                </a-cylinder>
+                <a-cylinder position="0.230 1.0105 -1.160" rotation="90 90 0" radius="0.050" height="0.015" color="#eee"
+                    material="transparent: true; opacity: 0.7">
+                </a-cylinder>
+                <a-entity gltf-model="#ENA58TL" scale="0.001 0.001 0.001" position="-0.085 1.230 -1.160"
+                    rotation="90 180 0">
+                </a-entity>
+                <a-entity gltf-model="#IQT1" scale="0.001 0.001 0.001" position="0.075 1.0505 -1.160"
+                    rotation="90 180 0">
+                </a-entity>
+                <a-entity gltf-model="#vim" scale="0.025 0.025 0.025" position="0.2 1.2685 -1.160" rotation="0 90 0">
+                </a-entity>
+            </a-entity>
+        </a-entity>
 
+        <a-entity pult position="0.5 0 0">
+            <a-box position="0 1 -1" width="0.600" depth="0.600" height="0.100" color="#425563"></a-box>
+            <a-box position="0 1.0505 -1.26" width="0.600" depth="0.080" height="0.001" color="#fff"></a-box>
+            <a-box position="0 1.0505 -0.74" width="0.600" depth="0.080" height="0.001" color="#fff"></a-box>
+            <a-box position="0 1.0505 -1" width="0.600" depth="0.440" height="0.001" color="#ccc"></a-box>
+            <a-image src="#logo" position="0.180 1.0511 -1.258" scale="0.2 0.04 0" rotation="-90 0 0"></a-image>
+            <a-image src="#claim" position="-0.160 1.0511 -1.258" scale="0.25 0.04 0" rotation="-90 0 0"></a-image>
+            <a-text value="Tecnologia IO-Link" negate="true" color="#000" position="-0.280 1.0511 -0.750"
+                scale="0.10 0.10" rotation="-90 0 0"></a-text>
+            <a-text value="Abrindo caminho para a Industria 4.0" negate="true" color="rgb(0,165,135)"
+                position="-0.280 1.0511 -0.73" scale="0.08 0.08" rotation="-90 0 0"></a-text>
+            <!-- alvo -->
+            <a-box position="0.200 1.0505 -0.870" width="0.010" depth="0.150" height="0.002" color="#111"></a-box>
+            <a-entity alvo animation="property: position; from: 0 0 0; to: 0 0 0.130;
+            dir: alternate; dur: 5000; easing: easeInOutQuad; loop:true">
+                <a-box position="0.200 1.0505 -0.935" width="0.010" depth="0.010" height="0.022" color="#bbb"></a-box>
+                <a-box position="0.200 1.0905 -0.935" width="0.070" depth="0.010" height="0.082" color="#bbb"></a-box>
+            </a-entity>
+            <!-- dispositivos -->
+            <a-entity gltf-model="#ICE2_" scale="0.001 0.001 0.001" position="-0.210 1.0705 -1.100" rotation="90 90 0">
+            </a-entity>
+            <a-entity conectores position="-0.210 1.0805 -1.162">
+                <a-entity gltf-model="#V1S" position="0.015 0 0.022" rotation="0 0 90"> </a-entity>
+                <a-entity gltf-model="#V1S" position="0.015 0 0.044" rotation="0 0 90"> </a-entity>
+                <a-entity gltf-model="#V1S" position="0.015 0 0.066" rotation="0 0 90"> </a-entity>
+                <a-entity gltf-model="#V1S" position="0.015 0 0.088" rotation="0 0 90"> </a-entity>
+                <a-entity gltf-model="#V1S" position="-0.015 0 0.022" rotation="0 0 90"> </a-entity>
+                <a-entity gltf-model="#V1S" position="-0.015 0 0.044" rotation="0 0 90"> </a-entity>
+                <a-entity gltf-model="#V1S" position="-0.015 0 0.066" rotation="0 0 90"> </a-entity>
+                <a-entity gltf-model="#V1S" position="-0.015 0 0.088" rotation="0 0 90"> </a-entity>
+            </a-entity>
+
+            <a-entity gltf-model="#NRB20" scale="0.001 0.001 0.001" position="-0.20 1.0805 -0.900" rotation="90 0 0">
+            </a-entity>
+            <a-entity position="-0.235 1.0805 -0.867" animation="property: rotation; from: 0 0 0; to: 0 -90 0;
+            dir: alternate; dur: 5000; easing: easeInOutQuad; loop:true">
+                <a-box position="0.035 0 0.01" scale="0.04 0.04 0.001" color="silver"></a-box>
+                <a-box position="0 0 0.00625" scale="0.005 0.04 0.0175" color="#eee"
+                    material="transparent: true; opacity: 0.7"></a-box>
+                <a-box position="0.0275 0 0.0125" scale="0.055 0.04 0.005" color="#eee"
+                    material="transparent: true; opacity: 0.7"></a-box>
+            </a-entity>
+            <a-entity gltf-model="#OMT300" scale="0.001 0.001 0.001" position="0.075 1.0805 -0.850" rotation="60 180 0">
+            </a-entity>
+            <a-cylinder position="0.075 1.1705 -0.9700" radius="0.005" height="0.3" rotation="120 0 0" color="red"
+                material="transparent: true; opacity: 0.3"></a-cylinder>
+            <a-entity gltf-model="#PMI40" scale="0.001 0.001 0.001" position="-0.040 1.0955 -0.910" rotation="0 90 0">
+            </a-entity>
+            <a-entity animation="property: position; from: 0 0 0; to: 0.04 0 0;
+            dir: alternate; dur: 5000; easing: easeInOutQuad; loop:true">
+                <a-entity gltf-model="#BT-F90" scale="1 1 1" position="-0.105 1.0805 -0.887" rotation="90 0 0">
+                </a-entity>
+                <a-cylinder position="-0.10 1.0705 -0.882" radius="0.0015" height="0.05" color="#eee"></a-cylinder>
+                <a-cylinder position="-0.08 1.0705 -0.882" radius="0.0015" height="0.05" color="#eee"></a-cylinder>
+            </a-entity>
+            <a-box position="-0.07 1.0505 -0.882" scale="0.08 0.002 0.01" color="#222"></a-box>
+            <a-entity gltf-model="#UC800" scale="0.001 0.001 0.001" position="0.200 1.0805 -0.970" rotation="90 180 0">
+            </a-entity>
+
+            <a-entity estruturafeijao position="0 0 0.050">
+                <a-box position="-0.050 1.1505 -1.160" width="0.020" depth="0.150" height="0.200" color="#eee"
+                    material="transparent: true; opacity: 0.7"></a-box>
+                <a-box position="0.200 1.1505 -1.160" width="0.020" depth="0.150" height="0.200" color="#eee"
+                    material="transparent: true; opacity: 0.7"></a-box>
+                <a-entity feijao position="0.075 1.2305 -1.160" rotation="0 0 0"
+                    animation="property: rotation; from: 0 0 0; to: -360 0 0; loop: true; easing: linear; dur: 4000">
+                    <a-box position="0 0 0" width="0.020" depth="0.100" height="0.200" color="#eee"
+                        material="transparent: false; opacity: 1"> </a-box>
+                    <a-cylinder position="-0.0125 0.075 0" rotation="90 90 0" radius="0.015" height="0.005"
+                        color="#222"> </a-cylinder>
+                    <a-cylinder position="-0.0125 -0.075 0" rotation="90 90 0" radius="0.015" height="0.005"
+                        color="#222"> </a-cylinder>
+                </a-entity>
+                <a-cylinder position="0.070 1.2305 -1.160" rotation="90 90 0" radius="0.005" height="0.360"
+                    color="#aaa">
+                </a-cylinder>
+                <a-cylinder position="0.230 1.2305 -1.160" rotation="90 90 0" radius="0.09" height="0.015" color="#eee"
+                    material="transparent: true; opacity: 0.7">
+                </a-cylinder>
+                <a-cylinder position="0.215 1.1005 -1.160" rotation="90 90 0" radius="0.005" height="0.050"
+                    color="#aaa">
+                </a-cylinder>
+                <a-cylinder position="0.230 1.1005 -1.160" rotation="90 90 0" radius="0.040" height="0.015" color="#eee"
+                    material="transparent: true; opacity: 0.7">
+                </a-cylinder>
+                <a-cylinder position="0.230 1.0105 -1.160" rotation="90 90 0" radius="0.050" height="0.015" color="#eee"
+                    material="transparent: true; opacity: 0.7">
+                </a-cylinder>
+                <a-entity gltf-model="#ENA58TL" scale="0.001 0.001 0.001" position="-0.085 1.230 -1.160"
+                    rotation="90 180 0">
+                </a-entity>
+                <a-entity gltf-model="#IQT1" scale="0.001 0.001 0.001" position="0.075 1.0505 -1.160"
+                    rotation="90 180 0">
+                </a-entity>
+                <a-entity gltf-model="#vim" scale="0.025 0.025 0.025" position="0.2 1.2685 -1.160" rotation="0 90 0">
+                </a-entity>
+            </a-entity>
+        </a-entity>
 
     </a-scene>
 </body>
