--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
             animation__mouseenter="property: position; to: 0.6 1.5 -1; dur: 1000; easing: linear;startEvents: mouseenter;"
             animation__mouseleave="property: position; to: 0.1 1.5 -1; dur: 1000; easing: linear;startEvents: mouseleave;">
         </a-entity>
-
+        
         <!-- piso -->
-        <a-box position="0 0 0" depth="10" height="0.1" width="10" color="#4CC3D9"
+        <a-box position="0 0 0" depth="10" height="0.1" width="10" color="#00a587s"
             animation__mouseenter="property: components.material.material.color; type: color; to: rgb(0,165,135); startEvents: mouseenter; dur: 500"
             animation__mouseleave="property: components.material.material.color; type: color; to: grey; startEvents: mouseleave; dur: 500">
         </a-box>
