--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             animation__mouseenter="property: position; to: 0.6 1.5 -1; dur: 1000; easing: linear;startEvents: mouseenter;"
             animation__mouseleave="property: position; to: 0.1 1.5 -1; dur: 1000; easing: linear;startEvents: mouseleave;">
         </a-entity>
-        
+
         <!-- piso -->
         <a-box position="0 0 0" depth="10" height="0.1" width="10" color="#00a587s"
             animation__mouseenter="property: components.material.material.color; type: color; to: rgb(0,165,135); startEvents: mouseenter; dur: 500"
@@ -68,6 +68,63 @@
                 <a-entity gltf-model="#V1S" position="-0.015 0 0.044" rotation="0 0 90"> </a-entity>
                 <a-entity gltf-model="#V1S" position="-0.015 0 0.066" rotation="0 0 90"> </a-entity>
                 <a-entity gltf-model="#V1S" position="-0.015 0 0.088" rotation="0 0 90"> </a-entity>
+                <a-entity position="0 0 0">
+                    <a-entity position="0.03 0.045 0.022"
+                        geometry="primitive: torus; radius: 0.015; radiusTubular: 0.001; arc: 180; "
+                        material="color:grey"> </a-entity>
+                    <a-cylinder position="0.045 0.005 0.022" radius="0.002" height="0.08" rotation="0 0 0" color="grey">
+                    </a-cylinder>
+                </a-entity>
+                <a-entity position="0 0 0.022">
+                    <a-entity position="0.03 0.045 0.022"
+                        geometry="primitive: torus; radius: 0.015; radiusTubular: 0.001; arc: 180; "
+                        material="color:grey"> </a-entity>
+                    <a-cylinder position="0.045 0.005 0.022" radius="0.002" height="0.08" rotation="0 0 0" color="grey">
+                    </a-cylinder>
+                </a-entity>
+                <a-entity position="0 0 0.044">
+                    <a-entity position="0.03 0.045 0.022"
+                        geometry="primitive: torus; radius: 0.015; radiusTubular: 0.001; arc: 180; "
+                        material="color:grey"> </a-entity>
+                    <a-cylinder position="0.045 0.005 0.022" radius="0.002" height="0.08" rotation="0 0 0" color="grey">
+                    </a-cylinder>
+                </a-entity>
+                <a-entity position="0 0 0.066">
+                    <a-entity position="0.03 0.045 0.022"
+                        geometry="primitive: torus; radius: 0.015; radiusTubular: 0.001; arc: 180; "
+                        material="color:grey"> </a-entity>
+                    <a-cylinder position="0.045 0.005 0.022" radius="0.002" height="0.08" rotation="0 0 0" color="grey">
+                    </a-cylinder>
+                </a-entity>
+
+                <a-entity position="0 0 0.088" rotation="0 180 0">
+                    <a-entity position="0.03 0.045 0.022"
+                        geometry="primitive: torus; radius: 0.015; radiusTubular: 0.001; arc: 180; "
+                        material="color:grey"> </a-entity>
+                    <a-cylinder position="0.045 0.005 0.022" radius="0.002" height="0.08" rotation="0 0 0" color="grey">
+                    </a-cylinder>
+                </a-entity>
+                <a-entity position="0 0 0.11" rotation="0 180 0">
+                    <a-entity position="0.03 0.045 0.022"
+                        geometry="primitive: torus; radius: 0.015; radiusTubular: 0.001; arc: 180; "
+                        material="color:grey"> </a-entity>
+                    <a-cylinder position="0.045 0.005 0.022" radius="0.002" height="0.08" rotation="0 0 0" color="grey">
+                    </a-cylinder>
+                </a-entity>
+                <a-entity position="0 0 0.044" rotation="0 180 0">
+                    <a-entity position="0.03 0.045 0.022"
+                        geometry="primitive: torus; radius: 0.015; radiusTubular: 0.001; arc: 180; "
+                        material="color:grey"> </a-entity>
+                    <a-cylinder position="0.045 0.005 0.022" radius="0.002" height="0.08" rotation="0 0 0" color="grey">
+                    </a-cylinder>
+                </a-entity>
+                <a-entity position="0 0 0.066" rotation="0 180 0">
+                    <a-entity position="0.03 0.045 0.022"
+                        geometry="primitive: torus; radius: 0.015; radiusTubular: 0.001; arc: 180; "
+                        material="color:grey"> </a-entity>
+                    <a-cylinder position="0.045 0.005 0.022" radius="0.002" height="0.08" rotation="0 0 0" color="grey">
+                    </a-cylinder>
+                </a-entity>
             </a-entity>
             <a-entity gltf-model="#NRB20" scale="0.001 0.001 0.001" position="0.140 1.0805 -0.930" rotation="90 0 0">
             </a-entity>
@@ -148,6 +205,63 @@
                 <a-entity gltf-model="#V1S" position="-0.015 0 0.044" rotation="0 0 90"> </a-entity>
                 <a-entity gltf-model="#V1S" position="-0.015 0 0.066" rotation="0 0 90"> </a-entity>
                 <a-entity gltf-model="#V1S" position="-0.015 0 0.088" rotation="0 0 90"> </a-entity>
+                <a-entity position="0 0 0">
+                    <a-entity position="0.03 0.045 0.022"
+                        geometry="primitive: torus; radius: 0.015; radiusTubular: 0.001; arc: 180; "
+                        material="color:grey"> </a-entity>
+                    <a-cylinder position="0.045 0.005 0.022" radius="0.002" height="0.08" rotation="0 0 0" color="grey">
+                    </a-cylinder>
+                </a-entity>
+                <a-entity position="0 0 0.022">
+                    <a-entity position="0.03 0.045 0.022"
+                        geometry="primitive: torus; radius: 0.015; radiusTubular: 0.001; arc: 180; "
+                        material="color:grey"> </a-entity>
+                    <a-cylinder position="0.045 0.005 0.022" radius="0.002" height="0.08" rotation="0 0 0" color="grey">
+                    </a-cylinder>
+                </a-entity>
+                <a-entity position="0 0 0.044">
+                    <a-entity position="0.03 0.045 0.022"
+                        geometry="primitive: torus; radius: 0.015; radiusTubular: 0.001; arc: 180; "
+                        material="color:grey"> </a-entity>
+                    <a-cylinder position="0.045 0.005 0.022" radius="0.002" height="0.08" rotation="0 0 0" color="grey">
+                    </a-cylinder>
+                </a-entity>
+                <a-entity position="0 0 0.066">
+                    <a-entity position="0.03 0.045 0.022"
+                        geometry="primitive: torus; radius: 0.015; radiusTubular: 0.001; arc: 180; "
+                        material="color:grey"> </a-entity>
+                    <a-cylinder position="0.045 0.005 0.022" radius="0.002" height="0.08" rotation="0 0 0" color="grey">
+                    </a-cylinder>
+                </a-entity>
+
+                <a-entity position="0 0 0.088" rotation="0 180 0">
+                    <a-entity position="0.03 0.045 0.022"
+                        geometry="primitive: torus; radius: 0.015; radiusTubular: 0.001; arc: 180; "
+                        material="color:grey"> </a-entity>
+                    <a-cylinder position="0.045 0.005 0.022" radius="0.002" height="0.08" rotation="0 0 0" color="grey">
+                    </a-cylinder>
+                </a-entity>
+                <a-entity position="0 0 0.11" rotation="0 180 0">
+                    <a-entity position="0.03 0.045 0.022"
+                        geometry="primitive: torus; radius: 0.015; radiusTubular: 0.001; arc: 180; "
+                        material="color:grey"> </a-entity>
+                    <a-cylinder position="0.045 0.005 0.022" radius="0.002" height="0.08" rotation="0 0 0" color="grey">
+                    </a-cylinder>
+                </a-entity>
+                <a-entity position="0 0 0.044" rotation="0 180 0">
+                    <a-entity position="0.03 0.045 0.022"
+                        geometry="primitive: torus; radius: 0.015; radiusTubular: 0.001; arc: 180; "
+                        material="color:grey"> </a-entity>
+                    <a-cylinder position="0.045 0.005 0.022" radius="0.002" height="0.08" rotation="0 0 0" color="grey">
+                    </a-cylinder>
+                </a-entity>
+                <a-entity position="0 0 0.066" rotation="0 180 0">
+                    <a-entity position="0.03 0.045 0.022"
+                        geometry="primitive: torus; radius: 0.015; radiusTubular: 0.001; arc: 180; "
+                        material="color:grey"> </a-entity>
+                    <a-cylinder position="0.045 0.005 0.022" radius="0.002" height="0.08" rotation="0 0 0" color="grey">
+                    </a-cylinder>
+                </a-entity>
             </a-entity>
 
             <a-entity gltf-model="#NRB20" scale="0.001 0.001 0.001" position="-0.20 1.0805 -0.900" rotation="90 0 0">
