--- a/index.html
+++ b/index.html
@@ -276,6 +276,8 @@
             </a-entity>
             <a-entity gltf-model="#OMT300" scale="0.001 0.001 0.001" position="0.075 1.0805 -0.850" rotation="60 180 0">
             </a-entity>
+            <a-box position="0.075 1.1055 -0.806" scale="0.003 0.008 0.006" color="green" rotation="120 0 0"
+                material="transparent: true; opacity: 0.7" animation="property: material.opacity;from:0;to:0.7;dur:500;loop:true;dir: alternate;"></a-box>
             <a-cylinder position="0.075 1.1705 -0.9700" radius="0.005" height="0.3" rotation="120 0 0" color="red"
                 material="transparent: true; opacity: 0.3"></a-cylinder>
             <a-entity gltf-model="#PMI40" scale="0.001 0.001 0.001" position="-0.040 1.0955 -0.910" rotation="0 90 0">
