--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
             <img id="logo" src="logo.PNG">
         </a-assets>
 
+        <!-- Controles-->
         <a-entity id="mouseCursor" cursor="rayOrigin: mouse"></a-entity>
-
+        <a-entity oculus-touch-controls="hand: left"></a-entity>
+        <a-entity oculus-touch-controls="hand: right"></a-entity>
         <!-- piso -->
         <a-box id="ePiso" position="0 0 0" depth="10" height="0.1" width="10" color="rgb(0,165,135)"></a-box>
 
