--- a/rfid.html
+++ b/rfid.html
@@ -69,7 +69,7 @@
 
         <a-entity id="ePult2" rotation="70 0 0" position="0.0 0 -1.75">
 
-     
+
             <a-box id="eFaixaInferior2" position="0 1.0505 -0.2825" width="0.530" depth="0.050" height="0.001"
                 color="#fff"></a-box>
             <a-box id="eFaixaCentral2" position="0 1.0505 -1" width="0.530" depth="0.350" height="0.001" color="#ccc">
@@ -83,10 +83,10 @@
                 value="Abrindo caminho para a Industria 4.0" negate="true" color="rgb(0,165,135)"
                 position="-0.25 1.0511 -0.84" scale="0.08 0.08" rotation="-90 0 0"></a-text>
 
-                <a-text id="eTextoIOLINK2" text="value: IO-Link"  negate="true"
-                color="#000" position="-0.25 1.0511 -1.155" scale="0.10 0.10" rotation="-90 0 0"></a-text>
-                <a-text id="eTextoIDENT2" text="value: IdentControl"  negate="true"
-                color="#000" position="-0.04 1.0511 -1.155" scale="0.10 0.10" rotation="-90 0 0"></a-text>
+            <a-text id="eTextoIOLINK2" text="value: IO-Link" negate="true" color="#000" position="-0.25 1.0511 -1.155"
+                scale="0.10 0.10" rotation="-90 0 0"></a-text>
+            <a-text id="eTextoIDENT2" text="value: IdentControl" negate="true" color="#000"
+                position="-0.04 1.0511 -1.155" scale="0.10 0.10" rotation="-90 0 0"></a-text>
 
 
             <!-- dispositivos -->
